styles.css
/* ... */
.quest-info{
    font-size: 1.8rem;
    color: #000;
    font-weight: bold;
    /* padding: 20px; */
}
.quest-info span{
    color: darkblue;
    font-size: 3.3rem;
    /* font-family: tra; */
    font-weight: 800;
}
.form-description{
    background-image: url(Assets/form_bg.jpg);
    background-size: cover;
    box-shadow: #000 0px 0px 10px;
    /* padding: 20px; */
}
.form-content{
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
    gap: 10px;
}
.form-description p{
    font-size: 1.5rem;
    color: #000;
    font-weight: 500;
    text-align: start;
    padding: 30px;
}
.form-top{
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: 10px;
}
.form-top img{
    min-width: 300px;
    transform: rotate(15deg);
}
.form-inputs{
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
    gap: 10px;
    font-size: 1.4rem;
}
input[type="text"],
input[type="email"],
input[type="tel"],
textarea {
    padding: 5px;
  font-size: 1.4rem;
}
textarea{
    width: 85%;
}
.ask-button{
    background-color: #8b181b;
    color: white;
    padding: 15px 20px;
    font-size: 1.5rem;
    border: none;
    cursor: pointer;
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
    gap: 10px;
    background: linear-gradient(to bottom, #cf1b1b 0%, #8b0000 100%);
    box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.4);
}
.ask-button img{
    width: 12px;
    height: 12px;
    min-width: 12px;
    /* flex-shrink: 0; */
    vertical-align: middle;
    border: none;
    box-shadow: none;
}
.form-bottom{
    display: flex; 
    flex-wrap: wrap;
    padding: 20px;
    align-items: center;
    justify-content: space-between;
    gap: 20px;
}
.form-bottom div:first-child{
    font-size: 1.2rem;
    color: #666363;
    font-weight: lighter;
    font-style: italic;
}


 .thirdsec{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    padding: 50px 0px ;
    gap:20px;
    box-shadow: 0px 20px 20px -15px rgba(0, 0, 0, 0.4);

}
.thirdsec .first .firstcontent{
    padding: 30px 0px;
    gap: 50px;

}
.thirdsec p{
    font-size: 1.7rem;
    color: #333;
}
/*.first{
    width: 33.33%;
    padding: 20px;
}
.spn1{
    color: #8b181b;
}
.firstcontent{
      display: flex;
    justify-content: center;
    align-items: center;
    
} */
 .first{
    text-align: left;
 }
.spn1{
    color: #8b181b;
    font-family: 'Times New Roman', Times, serif;
}
.first h3{
    color: #8b181b;
    line-height: 2;
}
.firstcontent{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: space-between;
    /* padding: 30px; */
    text-align: left;

    
}
.firstcontent img{
    min-width: 180px;
}
.btn{
    background-color: #8b181b;
    color: white;
    padding: 10px 20px;
    font-size: 1.4rem;
    box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.4);
    background: linear-gradient(to bottom, #cf1b1b 0%, #8b0000 100%);
    border: 1px solid #6b0000;
    position: relative;
    display: inline-flex;
    flex-wrap: wrap;
    align-items: center;
    gap: 10px;
    box-shadow: -30px 0px 40px -5px rgba(0, 0, 0, 0.3);
    /* direction: rtl; */
}
.btn::before {
    content: '';
    position: absolute;
    top: -2px;
    left: -60%;
    /* width: 160%; */
    width: calc(100% + 80%);
    height: 2px;
    background-color: #747474;

}
.btn img{
    min-width: 12px;
    box-shadow: none;
}
.button-wrapper{
    display: flex;
    justify-content: flex-end;
    flex-wrap: wrap;
    align-items: center;
    padding: 10px 50px;
}
.second{
    display: flex;
    /* padding: 0px 10px; */
    flex-direction: column;
    justify-content: center;
    flex-wrap: wrap;
    align-items: center;
    gap: 20px;
    border-left: #333 1px solid;
    border-right: #333 1px solid;
    /* border: #000 1px solid; */
}
.secfirst{
    padding: 10px 50px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex-wrap: wrap;
    /* align-items: center; */
    /* gap: 20px; */
}
.secfirst .firstcontent .firstimage img{
    min-width: 250px;
}
.secfirst .first .button-wrapper{
    display: flex;
    justify-content: flex-end;
}
.line{
  width: 80%;   
  height: 1px;     
  background-color: rgb(104, 100, 100);
}
.thirdimages{
    display: flex;
    justify-content: center;
    align-items: center;
}
.thirdimages img{
    min-width: 180px;

}
/* last section */
.last-section{
    display: flex;
    /* flex-wrap: wrap; */
    justify-content: space-between;
    align-items: flex-start;
    gap: 40px;
    padding: 40px 0px;
}
.last-left{
    padding: 0px 20px;
}
.last-section .last-left h4{
/* padding: 30px 0px; */
padding-bottom: 30px;
}
    

.practice-list{
    display: flex;
    flex-direction: column;
    gap: 25px;
    /* margin-top: 15px; */
}

.practice-list > div{
    display: flex;
    box-shadow: 0 3px 6px rgba(0,0,0,0.4);
}

.practice-list > div > div:first-child img{
    display: block;
    height: 100%;
    min-width: 10px;
}

.practice-card{
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
    padding: 25px 15px;
    background-color: gray;
    box-shadow: 0px 10px 40px -5px rgba(0, 0, 0, 0.5);
}

.practice-card h5 {
    white-space: nowrap;
    padding-right: 160px;
    /* padding-bottom: 20px; */
}
.last-learn-more{
    display: flex;
    flex-wrap: nowrap;
    /* font-size: 2.5rem; */
    padding: 30px 0px;
}

.learn-more{
    align-self: flex-end;
    background-color: gray;
    color: white;
    font-size: 1.2rem;
    border: none;
    font-weight: 900;
    padding: 6px 10px;
    /* display: inline-flex; */
    align-items: center;
    /* gap: 6px; */
    cursor: pointer;
}

.learn-more img{
    min-width: 10px;
}

.last-page-title{
    font-size: 3rem;
    padding-bottom: 30px;
}

.last-middle p{
    font-size: 1.4rem;
    color: #333;
    line-height: 1.5;
    margin-bottom: 10px;
}
/* ... */

